# protobridge

./: LICENSE  ProtoBridge.uplugin  README.md
.github/workflows/: build_release.yml
Proto/: TestGame.proto  unreal_common.proto
Source/ProtoBridge/: ProtoBridge.Build.cs
Source/ProtoBridge/Private/: GrpcAsyncNodeBase.cpp  GrpcBlueprintNode.cpp  GrpcByteBufferUtils.h  GrpcClientThread.cpp  GrpcInterceptor.cpp  GrpcOperationBase.cpp  GrpcServerJob.h  GrpcServerService.cpp  GrpcServerThread.cpp  GrpcStreamContext.cpp  GrpcWorkerThread.cpp  ProtoBridge.cpp  ProtoBridgeSubsystem.cpp
Source/ProtoBridge/Private/Tests/: AuthServerService.cpp  AuthServerService.h  GrpcTestRunner.cpp
Source/ProtoBridge/Public/: GrpcAsyncNodeBase.h  GrpcBlueprintNode.h  GrpcClientThread.h  GrpcIncludes.h  GrpcInterceptor.h  GrpcOperationBase.h  GrpcRequest.h  GrpcServerService.h  GrpcServerThread.h  GrpcStreamContext.h  GrpcStreamRequest.h  GrpcTypes.h  GrpcUnaryRequest.h  GrpcWorkerThread.h  IGrpcOperation.h  IGrpcRequest.h  ProtoBridgeSubsystem.h
Source/ProtoBridge/Public/Tests/: GrpcTestRunner.h
Source/ProtoBridgeCore/: ProtoBridgeCore.Build.cs
Source/ProtoBridgeCore/Private/: ProtoBridgeCoreModule.cpp  ProtoBridgeCoreSettings.cpp  ProtoBridgeEncoderRegistry.cpp  ProtoBridgeLogs.cpp  ProtoBridgeSubsystem.cpp  ProtobufMathUtils.cpp  ProtobufMemoryBridge.cpp  ProtobufReflectionUtils.cpp  ProtobufStringUtils.cpp  ProtobufStructUtils.cpp
Source/ProtoBridgeCore/Public/: ProtoBridgeCoreModule.h  ProtoBridgeCoreSettings.h  ProtoBridgeEncoderRegistry.h  ProtoBridgeLogs.h  ProtoBridgeSubsystem.h  ProtoBridgeTypes.h  ProtobufContainerUtils.h  ProtobufMathUtils.h  ProtobufMemoryBridge.h  ProtobufReflectionUtils.h  ProtobufStringUtils.h  ProtobufStructUtils.h
Source/ProtoBridgeEditor/: ProtoBridgeEditor.Build.cs
Source/ProtoBridgeEditor/Private/: ProtoBridgeDefs.cpp  ProtoBridgeEditorModule.cpp  ProtoBridgeEditorStyle.cpp  ProtoBridgeTypes.h
Source/ProtoBridgeEditor/Private/Services/: AsyncLogDispatcher.cpp  AsyncLogDispatcher.h  BinaryLocator.cpp  BinaryLocator.h  CommandBuilder.cpp  CommandBuilder.h  CompilationPlanner.cpp  CompilationPlanner.h  CompilationSession.cpp  CompilationSession.h  ConfigurationValidator.cpp  ConfigurationValidator.h  GeneratedCodePostProcessor.cpp  GeneratedCodePostProcessor.h  PathTokenResolver.cpp  PathTokenResolver.h  ProtoBridgeCacheManager.cpp  ProtoBridgeCacheManager.h  ProtoBridgeCompilerService.cpp  ProtoBridgeCompilerService.h  ProtoBridgeEventBus.cpp  ProtoBridgeEventBus.h  ProtoBridgeFileManager.cpp  ProtoBridgeFileManager.h  ProtoBridgeFileSystem.cpp  ProtoBridgeFileSystem.h  ProtoBridgeUtils.cpp  ProtoBridgeUtils.h  ProtocExecutor.cpp  ProtocExecutor.h  TaskExecutor.cpp  TaskExecutor.h
Source/ProtoBridgeEditor/Private/Settings/: ProtoBridgeSettings.cpp
Source/ProtoBridgeEditor/Private/Subsystems/: ProtoBridgeCompilerSubsystem.cpp
Source/ProtoBridgeEditor/Private/UI/: ProtoBridgeLogPresenter.cpp  ProtoBridgeLogPresenter.h  ProtoBridgeUIManager.cpp  ProtoBridgeUIManager.h
Source/ProtoBridgeEditor/Private/Workers/: CommandBuilderWorker.cpp  CommandBuilderWorker.h  CompilationPlanner.cpp  CompilationPlanner.h  (+8 more)
Source/ProtoBridgeEditor/Public/: ProtoBridgeCompilation.h  ProtoBridgeConfiguration.h  ProtoBridgeDefs.h  ProtoBridgeDelegates.h  ProtoBridgeEditorModule.h  ProtoBridgeEditorStyle.h
Source/ProtoBridgeGenerator/: CMakeLists.txt
Source/ProtoBridgeGenerator/Private/: CodeBuilder.cpp  CodeBuilder.h  DependencySorter.cpp  DependencySorter.h  GeneratorContext.cpp  GeneratorContext.h  ProtobufGenerator.cpp  TypeRegistry.cpp  TypeRegistry.h  UECodeGenerator.cpp  UECodeGenerator.h
Source/ProtoBridgeGenerator/Private/Config/: UEDefinitions.h
Source/ProtoBridgeGenerator/Private/Context/: NameResolver.cpp  NameResolver.h  NameValidator.cpp  NameValidator.h
Source/ProtoBridgeGenerator/Private/Generators/: EnumGenerator.cpp  EnumGenerator.h  MessageGenerator.cpp  MessageGenerator.h  OneOfGenerator.cpp  OneOfGenerator.h  ProtoLibraryGenerator.cpp  ProtoLibraryGenerator.h  ServiceGenerator.h
Source/ProtoBridgeGenerator/Private/Strategies/: EnumFieldStrategy.cpp  EnumFieldStrategy.h  FieldStrategy.cpp  FieldStrategy.h  FieldStrategyFactory.cpp  FieldStrategyFactory.h  MapFieldStrategy.cpp  MapFieldStrategy.h  MessageFieldStrategy.cpp  MessageFieldStrategy.h  PrimitiveFieldStrategy.cpp  PrimitiveFieldStrategy.h  StrategyPool.cpp  StrategyPool.h  StringFieldStrategy.cpp  StringFieldStrategy.h  UnrealStrategies.cpp  UnrealStrategies.h
Source/ProtoBridgeThirdParty/: ProtoBridgeThirdParty.Build.cs
Source/ProtoBridgeThirdParty/scripts/: build_android.sh  build_ios.sh  build_linux.sh  build_macos.sh  build_win64.ps1
(+12 files in other folders)
